changed test's name and removed timeout from config.properties

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,3 @@
-url=https://bymed.top/calc/%D1%81%D0%BA%D1%84-2148
+//url=https://bymed.top/calc/%D1%81%D0%BA%D1%84-2148
 browser=chrome
 headless=false
-timeout=10
