--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,6 @@
-//url=
+url=https://aqa2504.testrail.io/
 browser=chrome
 headless=false
-timeout=10
+username=atrostyanko@gmail.com
+password=Qwertyu_1
+timeout=20
